Added dark mode feature with a button to toggle it

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,32 @@ code {
 div.collection-item {
   cursor: pointer;
 }
+
+.collection {
+  margin-bottom: 0px;
+}
+
+.input-todo {
+    /* border-top-color: rgb(224, 224, 224); */
+    border-top-color: rgb(100,100,100);
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-right-color: rgb(224, 224, 224);
+    border-right-style: solid;
+    border-right-width: 1px;
+    border-bottom-color: rgb(224, 224, 224);
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-left-color: rgb(224, 224, 224);
+    border-left-style: solid;
+    border-left-width: 1px;
+    border-image-source: initial;
+    border-image-slice: initial;
+    border-image-width: initial;
+    border-image-outset: initial;
+    border-image-repeat: initial;
+}
+
+.container {
+  width: 40%;
+}
